|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-06-02 Raphael Geissert
	- GUI
		* Fixed error when a password with length > 20 is rejected
		* Fixed #346: Call to undefined function: gen_def_layout() in gui/admin/layout.php
		* Fixed #353: Preview in order settings doesn't work due to usage of wrong URL
		* Fixed #355: Class to string conversion error in gui/include/debug.php
		* Fixed #252: vfs::open() not always returning false
		* Fixed #338: Undefined $subject (Also replaced preg_replace usage with str_replace)
		* Fixed #350: Admin can modify own information in manage_users.php and modified account's sessions are left
		* Fixed #354: white page on Reseller user stats if domain per page is odd number
		* Fixed #352: Extra "-->" on top of Orderpanel's page

2007-06-01 Raphael Geissert
	- GUI
		* Added colouring and improved browsing of rkhunter's log
	- SETUP
		* Added more characters to PMA's blowfish key generation code

2007-06-01 Henrik Schytte
	- GUI
		* Fixed #325: ispCP wasn't ready for small Screens (1024x768)
		* Fixed new Icons for the Filemanager, too ;)

2007-06-01 Benedikt Heintel
	- SETUP
		* fixed serveral install bugs
	- GUI
		* Fixed #279: '-' and '_' not allowed in e-mail passwords
		* Fixed #333: Variables "{1}" in the Admin Log
		* Fixed #337: uninitialized value in concatenation during setup warning
		* Fixed #338: welcome e-mail subject not parsed
		* Fixed #340: Logo upload not possible
		* Fixed #341: Serverports not deleteable - deleted delete text

2007-05-31 Benedikt Heintel
	- DATABASE
		* changed Englisch language
	- GUI
		* Fixed: missing $cfg in tr-function
		* started build-in of AWStats (#7)

2007-05-31 Henrik Schytte
	- GUI