@@ -17,19 +17,36 @@
  *  http://opensource.org | osi@opensource.org
  **/
 
-function dump_gui_debug() {
-
-    $source = array ('_SESSION', '_POST', '_GET', '_COOKIE',
-                     '_FILES', 'GLOBALS','_SERVER');
-
-    foreach ($source as $vname)
-    {
-        echo "<font color='#0000FF'><u>Content of <b>\$$vname</b>:</u><br /></font>";
-        echo '<pre>';
-        echo htmlentities(print_r($$vname, true));
-        echo '</pre>';
-    }
-
+function dump_gui_debug()
+{
+    echo '<font color="#0000FF"><u>Content of <b>$_SESSION</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($_SESSION, true));
+    echo '</pre>';
+    echo '<font color="#0000FF"><u>Content of <b>$_POST</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($_POST,    true));
+    echo '</pre>';
+    echo '<font color="#0000FF"><u>Content of <b>$_GET</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($_GET,     true));
+    echo '</pre>';
+    echo '<font color="#0000FF"><u>Content of <b>$_COOKIE</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($_COOKIE,  true));
+    echo '</pre>';
+    echo '<font color="#0000FF"><u>Content of <b>$_FILES</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($_FILES,   true));
+    echo '</pre>';
+    echo '<font color="#0000FF"><u>Content of <b>$GLOBALS</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($GLOBALS,  true));
+    echo '</pre>';
+    echo '<font color="#0000FF"><u>Content of <b>$_SERVER</b>:</u><br /></font>';
+    echo '<pre>';
+    echo htmlentities(print_r($_SERVER,  true));
+    echo '</pre>';
 }
 
 ?>
